# ChangeLog for dev-util/qgit
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/qgit/Attic/ChangeLog,v 1.2 2005/11/11 13:32:00 ferdy Exp $

*qgit-0.97.1 (11 Nov 2005)

  11 Nov 2005; Fernando J. Pereda <ferdy@gentoo.org> +qgit-0.97.1.ebuild:
  version bump, wrt bug #112120

*qgit-0.96.1 (30 Oct 2005)

  30 Oct 2005; Fernando J. Pereda <ferdy@gentoo.org> +metadata.xml,
  +qgit-0.96.1.ebuild:
  initial commit. fixes #110072
