@@ -1,0 +1,1 @@
+MD5 a41e8557eca2930676bba69f9fc985e0 qgit-1.1rc1.tar.bz2 162310
