@@ -1,6 +1,11 @@
 # ChangeLog for dev-util/qgit
-# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/qgit/Attic/ChangeLog,v 1.2 2005/11/11 13:32:00 ferdy Exp $
+# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-util/qgit/Attic/ChangeLog,v 1.3 2006/01/09 08:16:53 ferdy Exp $
+
+*qgit-1.1_rc1 (09 Jan 2006)
+
+  09 Jan 2006; Fernando J. Pereda <ferdy@gentoo.org> +qgit-1.1_rc1.ebuild:
+  New upstream version
 
 *qgit-0.97.1 (11 Nov 2005)
 
